Broken imported Collada - at least one face with vertex count < 3 #48602

Closed
opened 2016-06-07 18:01:50 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 2.77

Short description of error
Some Collada files imported from Modo are broken due to faces missing vertices.

Exact steps for others to reproduce the error
Import the following file: CALIFORNIA5340.dae

Primitive POLYLIST in CALTMQ90_1_MD has at least one face with vertex count < 3
Ignoring mesh CALTMQ90_1_MD
(...)
Writing node id='Geometry-CALTMQ90_1_MDNode', name='CALTMQ90_1_MD'
Couldn't find a mesh by UID.
error: node id="Geometry-CALTMQ90_1_MDNode", name="CALTMQ90_1_MD" refers to an undefined instance_mesh.

The table top is missing from the imported model. The same file imports fine on Meshlab.

Note to the developer

@GaiaClary in a universe of > 2k models only 5 meshes show up with this problem. I'm getting the original .fbx and modo file for this one to try to help simplify and figure out what may be the issue. I would really like to know at least if the problem is in the .dae files (although they open fine in meshlab) or the importer

**Blender Version** Broken: 2.77 **Short description of error** Some Collada files imported from Modo are broken due to faces missing vertices. **Exact steps for others to reproduce the error** Import the following file: [CALIFORNIA5340.dae](https://archive.blender.org/developer/F316337/CALIFORNIA5340.dae) ``` Primitive POLYLIST in CALTMQ90_1_MD has at least one face with vertex count < 3 Ignoring mesh CALTMQ90_1_MD (...) Writing node id='Geometry-CALTMQ90_1_MDNode', name='CALTMQ90_1_MD' Couldn't find a mesh by UID. error: node id="Geometry-CALTMQ90_1_MDNode", name="CALTMQ90_1_MD" refers to an undefined instance_mesh. ``` The table top is missing from the imported model. The same file imports fine on Meshlab. **Note to the developer** @GaiaClary in a universe of > 2k models only 5 meshes show up with this problem. I'm getting the original .fbx and modo file for this one to try to help simplify and figure out what may be the issue. I would really like to know at least if the problem is in the .dae files (although they open fine in meshlab) or the importer
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Gaia Clary was assigned by Dalai Felinto 2016-06-07 18:01:50 +02:00
Author
Owner

Added subscribers: @dfelinto, @GaiaClary

Added subscribers: @dfelinto, @GaiaClary

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by a47937454c

This issue was referenced by a47937454c995c54edce8a11c65ae24272198eaa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48602
No description provided.